# verible

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bzlmod  docs.sh  index.md  kythe-browse-multi-file.sh  kythe-browse.sh  kythe-facts-verifier.sh  kythe-multi-file-verifier.sh  kythe-verifier.sh  lint.md  requirements.txt  runLinter.sh  shell.nix  tee  verilog_format.md  verilog_lint.md  verilog_syntax.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: settings.sh
.github/ISSUE_TEMPLATE/: formatter-issue.md  kythe-issues.md  language-server-issue.md  lexer-parser-issue.md  style-linter-bug.md  style-linter-feature-request.md
.github/kokoro/: continuous.cfg  kythe.sh  presubmit.cfg  run.sh
.github/travis/: github-pages-setup.sh  github-releases-setup.sh  install-bazel.sh  install.sh  output-logs.sh  script.sh  set-compiler.sh  success.sh
.github/workflows/: clang-tidy-post-comment.yml  clang-tidy-run.yml  code-style.yml  generate-matrix.py  generate_matrix.sh  github-pages-setup.sh  github-releases-setup.sh  install-bazel.sh  install-clang-tools.sh  install-kythe.sh  install-python.sh  install.sh  macos-compile.yml  macos-test.yml  run-clang-format.sh  run-kythe.sh  script.sh  set-compiler.sh  success.sh  verible-ci.yml  windows-compile.yml
Docker/: docker-generate.sh  docker-run.sh
actions/lint/: Dockerfile  README.md  action.yml  problem_matcher.json  run.py
bazel/: BUILD  absl.patch  all_compdb_rules.bzl  bison.bzl  build-version.py  build-version.sh  compilation_db_seed_targets.bzl  fix-uninitialized-var.patch  flex.bzl  flex.patch  installer-bazel7.patch  installer.patch  jsoncpp.BUILD  jsonhpp.BUILD  m4.patch  nlohmann-libname.patch  nlohmann_module.patch  proto-add-module-bazel.patch  proto-fix-uninitialized-value.patch  proto-no-mixed-sign-comp.patch  python_anytree.BUILD  python_six.BUILD  re2-stringpiece.patch  rules_cc_466.patch  sh_test_with_runfiles_lib.bzl  sh_test_with_runfiles_lib.sh  variables.bzl  win_flex_bison.BUILD  win_flex_bison.bzl  zlib.BUILD
common/: README.md
common/analysis/: BUILD  README.md  citation.cc  citation.h  command-file-lexer.cc  command-file-lexer.h  command-file-lexer_test.cc  command_file.lex  command_file_lexer.cc  command_file_lexer.h  command_file_lexer_test.cc  config_file.lex  config_file_lexer.cc  config_file_lexer.h  file-analyzer.cc  file-analyzer.h  file-analyzer_test.cc  file_analyzer.cc  file_analyzer.h  file_analyzer_test.cc  lint-rule.h  (+77 more)
doc/: conf.py  development.md  formatter.md  formatter_simplified_class_diagram.graphml  index.rst  indexing.md  parser_design.md  requirements.txt  style_lint.md
external_libs/: BUILD  README.md  editscript.h  editscript_test.cc
img/: Makefile
releasing/: README.md  bazel.dockerstage  build.sh  centos.basic.dockerfile  centos.build.dockerfile  centos.dockerfile  centos_6_bazel.dockerstage  docker-generate.sh  docker-run.sh  gflags2man.dockerstage  supported_bases.txt  ubuntu.basic.dockerfile  ubuntu.build.dockerfile  ubuntu.dockerfile  ubuntu_compiler.dockerstage
verilog/: README.md
(+2345 files in other folders)
