module(
    name = "verible",
    version = "head",
)

# Experimental for m4
bazel_dep(name = "rules_cc_autoconf", version = "0.15.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "bison", version = "3.8.2.bcr.7")
bazel_dep(name = "flex", version = "2.6.4.bcr.5")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "31.0-rc2")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# To build compilation DB and run build-cleaning
bazel_dep(name = "bant", version = "0.2.10", dev_dependency = True)
