module(
    name = "verible",
    version = "head",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "31.0-rc2")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_bison", version = "0.4.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_flex", version = "0.4.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.2.3")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# To build compilation DB and run build-cleaning
bazel_dep(name = "bant", version = "0.2.10", dev_dependency = True)
